# nl-supermarkt-mcp

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.cron  Dockerfile.sync  README.md  detect_price_drops.py  docker-compose.yml  docker-start.sh  pyproject.toml  run.sh  sync_drogist_only.py  sync_folderz.py  sync_prices.py  sync_promotions.py  sync_recepten.py  test_server.py
docker/: crontab  init.sql  sync_all.py
src/: __init__.py  server.py  server_sse.py  sync_folderz_v4.py
