[project]
name = "nl-supermarkt-mcp"
version = "0.2.0"
description = "MCP server voor Nederlandse supermarktprijzen - vergelijk prijzen, bekijk aanbiedingen, converteer recepten en vind winkels in de buurt"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your@email.com"}
]
keywords = ["mcp", "supermarket", "prices", "netherlands", "albert-heijn", "jumbo"]

dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
nl-supermarkt-mcp = "src.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
